--- a/Final/Data_Preprocessing.ipynb
+++ b/Final/Data_Preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "4a2635bf",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "59418284",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "DATA_PATH = \"data/raw/movies_dataset_revenue.csv\"\n",
+    "DATA_PATH = \"E:\\\\MyProject\\\\movie-revenue-prediction\\\\data\\\\raw\\\\movies_dataset_revenue.csv\"\n",
     "\n",
     "df = pd.read_csv(DATA_PATH)\n",
     "print(\"Shape of the dataset:\", df.shape)"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "812fbee6",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "0dfb56ad",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "id": "bebc7aea",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "99d5206f",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "4c3c199f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "189965c2",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "1ffe5fe6",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "5b2939f4",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "e2393ebc",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "99db8780",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "id": "002dfee2",
    "metadata": {},
    "outputs": [
@@ -413,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "2c118eba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['budget', 'revenue', 'runtime', 'release_year', 'release_month',\n",
+       "Index(['id', 'budget', 'revenue', 'runtime', 'release_year', 'release_month',\n",
        "       'release_dayofweek', 'release_quarter', 'is_weekend',\n",
        "       'is_blockbuster_season', 'is_franchise', 'cast_score', 'director_score',\n",
        "       'keyword_score', 'genre_score', 'production_company_score',\n",
@@ -433,7 +433,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
     "test = test.join(genres_df_test)\n",
     "\n",
     "\n",
-    "cols_to_drop = ['id', 'title', 'release_date', 'genres', 'cast', 'production_companies', \n",
+    "cols_to_drop = ['title', 'release_date', 'genres', 'cast', 'production_companies', \n",
     "                'production_countries', 'keywords', 'director', 'original_language', 'rating',\n",
     "                'vote_count', 'popularity', 'collection_list', 'collection']\n",
     "cols_to_drop = [c for c in cols_to_drop if c in train.columns]\n",
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "90b63488",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "id": "121168b6",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
     "    genres_df = pd.DataFrame(genres_encoded, columns=[f\"genre_{c.replace(' ','_')}\" for c in mlb.classes_], index=df.index)\n",
     "    df = df.join(genres_df)\n",
     "\n",
-    "    cols_to_drop = ['id', 'title', 'release_date', 'genres', 'cast', 'production_companies', \n",
+    "    cols_to_drop = ['title', 'release_date', 'genres', 'cast', 'production_companies', \n",
     "                    'production_countries', 'keywords', 'director', 'original_language', 'rating',\n",
     "                    'vote_count', 'popularity', 'collection_list', 'collection']\n",
     "    cols_to_drop = [c for c in cols_to_drop if c in df.columns]\n",
