--- a/lmh_questions.ipynb
+++ b/lmh_questions.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "424d575c",
    "metadata": {},
    "outputs": [
@@ -267,17 +267,14 @@
     "# Handle different column names from merge\n",
     "runtime = data_raw['runtime'].values if 'runtime' in data_raw.columns else None\n",
     "\n",
-    "# Revenue might be 'revenue', 'revenue_x', or 'revenue_y' after merge\n",
-    "revenue_col = 'revenue'\n",
-    "\n",
-    "# revenue_col = None\n",
-    "# if 'revenue' in data_raw.columns:\n",
-    "#     revenue_col = 'revenue'\n",
-    "# elif 'revenue_y' in data_raw.columns:\n",
-    "#     revenue_col = 'revenue_y'\n",
-    "# elif 'revenue_x' in data_raw.columns:\n",
-    "#     revenue_col = 'revenue_x'\n",
-    "# revenue_log = data_raw[revenue_col].values if revenue_col else None\n",
+    "revenue_col = None\n",
+    "if 'revenue' in data_raw.columns:\n",
+    "    revenue_col = 'revenue'\n",
+    "elif 'revenue_y' in data_raw.columns:\n",
+    "    revenue_col = 'revenue_y'\n",
+    "elif 'revenue_x' in data_raw.columns:\n",
+    "    revenue_col = 'revenue_x'\n",
+    "revenue_log = data_raw[revenue_col].values if revenue_col else None\n",
     "\n",
     "# Rating might be 'vote_average' or 'rating'\n",
     "rating_col = None\n",
@@ -380,8 +377,7 @@
     "axes.legend(fontsize=11, loc='best')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
