--- a/Final/Meaningful_Question.ipynb
+++ b/Final/Meaningful_Question.ipynb
@@ -233,7 +233,7 @@
        "[3 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
        "[3 rows x 45 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7bf4e2a7",
    "metadata": {},
    "outputs": [
@@ -630,8 +630,8 @@
      "output_type": "stream",
      "text": [
       "Data ready for XGBoost!\n",
-      "RMSE (Log Scale): 1.9453973322910492\n",
-      "R2: 0.504496442284105\n"
+      "RMSE (Log Scale): 1.9475241757450368\n",
+      "R2: 0.5034124122442782\n"
      ]
     }
    ],
@@ -642,16 +642,21 @@
     "\n",
     "print(\"Data ready for XGBoost!\")\n",
     "\n",
-    "model = xgb.XGBRegressor(\n",
-    "    objective='reg:squarederror',\n",
-    "    n_estimators=1000,      # Số lượng cây\n",
-    "    learning_rate=0.05,     # Tốc độ học\n",
-    "    max_depth=2,            # Độ sâu của cây (tránh overfitting)\n",
-    "    subsample=0.8,          # Dùng 80% dữ liệu mỗi lần để tránh overfit\n",
-    "    colsample_bytree=0.8,   # Dùng 80% feature mỗi lần\n",
-    "    n_jobs=-1,              # Dùng hết CPU\n",
-    "    random_state=42\n",
-    ")\n",
+    "model = xgb.XGBRegressor( \n",
+    "    objective='reg:squarederror', \n",
+    "    n_estimators=3000, \n",
+    "    learning_rate=0.02, \n",
+    "    max_depth=3, # interaction vừa đủ \n",
+    "    min_child_weight=10, # rất quan trọng với encoding \n",
+    "    subsample=0.8, \n",
+    "    colsample_bytree=0.8, \n",
+    "    gamma=0.1, # chặn split yếu \n",
+    "    reg_lambda=1.0, \n",
+    "    reg_alpha=0.0, \n",
+    "    random_state=42, \n",
+    "    n_jobs=-1 \n",
+    "    )\n",
+    "\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
@@ -2233,7 +2238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
