--- a/Final/Meaningful_Question.ipynb
+++ b/Final/Meaningful_Question.ipynb
@@ -2188,6 +2188,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7edec84e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(figsize=(11, 6.5))\n",
+    "\n",
+    "x = np.arange(len(runtime_categories_plot))\n",
+    "\n",
+    "# =========================\n",
+    "# Average Rating (Left axis)\n",
+    "# =========================\n",
+    "axes.plot(\n",
+    "    x,\n",
+    "    avg_ratings,\n",
+    "    marker='s',\n",
+    "    linestyle='-',\n",
+    "    linewidth=3,\n",
+    "    markersize=11,\n",
+    "    color='#F18F01',\n",
+    "    label='Average Rating',\n",
+    "    zorder=3\n",
+    ")\n",
+    "\n",
+    "axes.fill_between(\n",
+    "    x,\n",
+    "    avg_ratings,\n",
+    "    alpha=0.18,          # 👈 giảm opacity\n",
+    "    color='#F18F01',\n",
+    "    zorder=1\n",
+    ")\n",
+    "\n",
+    "# Rating labels + counts (đẩy cao hơn)\n",
+    "for i, (rating, count) in enumerate(zip(avg_ratings, counts)):\n",
+    "    axes.text(\n",
+    "        i,\n",
+    "        rating + 0.28,    # 👈 đẩy lên cao\n",
+    "        f'{rating:.2f}\\n(n={int(count)})',\n",
+    "        ha='center',\n",
+    "        va='bottom',\n",
+    "        fontsize=10,\n",
+    "        fontweight='bold',\n",
+    "        color='black',\n",
+    "        zorder=5\n",
+    "    )\n",
+    "\n",
+    "axes.set_ylabel('Average Rating (1–10)', fontsize=12, fontweight='bold')\n",
+    "axes.set_ylim(0, max(avg_ratings) + 1.6)\n",
+    "\n",
+    "# =========================\n",
+    "# Average Revenue (Right axis)\n",
+    "# =========================\n",
+    "axes2 = axes.twinx()\n",
+    "avg_revenues_million = avg_revenues / 1e6\n",
+    "\n",
+    "axes2.plot(\n",
+    "    x,\n",
+    "    avg_revenues_million,\n",
+    "    marker='o',\n",
+    "    linestyle='--',\n",
+    "    linewidth=2.8,\n",
+    "    markersize=10,\n",
+    "    color='#2EC4B6',\n",
+    "    label='Average Revenue (Million USD)',\n",
+    "    zorder=4\n",
+    ")\n",
+    "\n",
+    "# Revenue labels (lệch ngang + cao hơn)\n",
+    "for i, revenue in enumerate(avg_revenues_million):\n",
+    "    axes2.text(\n",
+    "        i,               \n",
+    "        revenue + max(avg_revenues_million) * 0.05,\n",
+    "        f'${revenue:.1f}M',\n",
+    "        ha='right',\n",
+    "        va='top',\n",
+    "        fontsize=10,\n",
+    "        fontweight='bold',\n",
+    "        color='#1B6F6A',\n",
+    "        zorder=5\n",
+    "    )\n",
+    "\n",
+    "axes2.set_ylabel(\n",
+    "    'Average Revenue (Million USD)',\n",
+    "    fontsize=12,\n",
+    "    fontweight='bold',\n",
+    "    color='#1B6F6A'\n",
+    ")\n",
+    "axes2.tick_params(axis='y', labelcolor='#1B6F6A')\n",
+    "axes2.set_ylim(0, max(avg_revenues_million) * 1.25)\n",
+    "\n",
+    "# =========================\n",
+    "# X-axis & Title\n",
+    "# =========================\n",
+    "axes.set_xticks(x)\n",
+    "axes.set_xticklabels(\n",
+    "    runtime_categories_plot,\n",
+    "    fontsize=11,\n",
+    "    rotation=12,\n",
+    "    ha='right'\n",
+    ")\n",
+    "\n",
+    "axes.set_xlabel('Runtime Category', fontsize=12, fontweight='bold')\n",
+    "axes.set_title(\n",
+    "    'Average Rating and Revenue by Movie Runtime',\n",
+    "    fontsize=14,\n",
+    "    fontweight='bold',\n",
+    "    pad=12\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# Grid & Legend\n",
+    "# =========================\n",
+    "axes.grid(axis='y', linestyle='--', alpha=0.35)\n",
+    "axes.grid(axis='x', visible=False)\n",
+    "\n",
+    "lines1, labels1 = axes.get_legend_handles_labels()\n",
+    "lines2, labels2 = axes2.get_legend_handles_labels()\n",
+    "axes.legend(\n",
+    "    lines1 + lines2,\n",
+    "    labels1 + labels2,\n",
+    "    fontsize=11,\n",
+    "    loc='upper left',\n",
+    "    frameon=True\n",
+    ")\n",
+    "\n",
+    "plt.tight_layout(pad=2.8)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5d03b40",
    "metadata": {},
